force-app/main/default/objects/Customer_Onboarding_Criteria__c/Customer_Onboarding_Criteria__c.object-meta.xml
<CustomObject>
    <description>A record of this object stores the Question&apos;s API Name, Display Label, and the criteria that determines on what form it should be displayed.</description>
    <label>Customer Onboarding Criteria</label>
    <nameField>
        <displayFormat>COSQ-{0000}</displayFormat>
        <label>Question Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Onboarding Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>