force-app/main/default/objects/Customer_Onboarding_Criteria__c/fields/Field_Match__c.field-meta.xml
<CustomField>
    <fullName>Field_Match__c</fullName>
    <label>Field Match</label>
    <length>100</length>
    <type>Text</type>
</CustomField>