force-app/main/default/objects/Customer_Onboarding_Criteria__c/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <description>One of the criteria. Service Line of Case determines whether this question is displayed or not</description>
    <label>Service Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accutrac</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>DB&amp;R</fullName>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>DRCMI</fullName>
            </value>
            <value>
                <fullName>Live Vault</fullName>
            </value>
            <value>
                <fullName>One Time Shred</fullName>
            </value>
            <value>
                <fullName>RM</fullName>
            </value>
            <value>
                <fullName>RM Pathology</fullName>
            </value>
            <value>
                <fullName>Shred</fullName>
            </value>
            <value>
                <fullName>SKP Shell</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Vault Climate Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>