force-app/main/default/objects/Customer_Onboarding_Criteria__c/fields/Supplies_Order_Required__c.field-meta.xml
<CustomField>
    <fullName>Supplies_Order_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>One of the criteria. Supplies Order Required determines whether this question gets displayed or not</description>
    <label>Supplies Order Required?</label>
    <type>Checkbox</type>
</CustomField>