force-app/main/default/objects/Customer_Onboarding_Criteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Line__c</columns>
    <columns>Deal_Type__c</columns>
    <columns>Upsell_Type__c</columns>
    <columns>Supplies_Order_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>